--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,13 +13,29 @@ html {
     font-family: "Open Sans", sans-serif;
 }
 
-header {
+nav {
+    background-color: rgb(190, 49, 68);
+    height: 50px;
+    width: 100%;
+    position: fixed;
     display: flex;
-    background-color: rgb(199, 199, 199);
+    justify-content: flex-end;
+    align-items: stretch;
+}
+@media screen and (max-width: 400px) {
+    nav {
+        justify-content: center;
+    }
 }
 
-header a {
+nav a {
+    padding: 1rem;
     text-decoration: none;
+    color: white;
+}
+
+nav a:hover {
+    background-color: rgb(69, 86, 125);
 }
 
 img {
